# Ray-Tracing-Cpp-PWJC

./: .gitignore  README.md  config.json  imag.ppm  main.cpp  premake5.lua
OneWeek/: CMakeLists.txt  config.json
OneWeek/Inc/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  sphere.hpp  utility.hpp  vec3.hpp
OneWeek/Src/: main.cpp
PWJC_Zabierowski_Zielinski/: CMakeLists.txt  config.json
PWJC_Zabierowski_Zielinski/Inc/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp  utility.hpp  vec3.hpp
PWJC_Zabierowski_Zielinski/Src/: camera.cpp  color.cpp  hittable_list.cpp  main.cpp  material.cpp  sphere.cpp  vec3.cpp
Src/: Ray.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  main.cpp
include/: Color.hpp  Config.hpp  Point3.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Viewport.hpp  architecture.txt  readConfig.hpp  read_config.hpp
